--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto",
   "version": "1.0.0",
-  "description": "* Описание\r * Технологии\r * Figma",
+  "description": "JS Mesto",
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && webpack",
@@ -20,21 +20,21 @@
   },
   "homepage": "https://github.com/yuliaiv-iv/mesto#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^4.2.0",
-    "file-loader": "^6.0.0",
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "core-js": "^3.8.1"
   }
 }
